Updated fiquela to version 3.0 and improved exports to support all formats by INTO closure
